# h2pdaq

./: .gitignore  README.md  example.md
.github/workflows/: release-daq-package.yml.disable  release-publish.yaml
central-server/: main.py  pyproject.toml
central-server/central/: central.py  influxdb.py  models.py
central-server/scripts/: influxdb_setup.py
central-server/src/: .env.example  central.py  influxdb.py  models.py
daq-central/: central_connector_pipeline.py  central_ingest.py  pyproject.toml
gui/h2pgui/: gui.py
gui/h2pgui/grpc/: gui_grpc.py
lib/: __init__.py  daq_pipeline.py  decorator.py  pyproject.toml  readme-local-daq.md
lib/src/h2pcontrol_daq/: __init__.py  capture.py  influx_sink.py  models.py  pipeline.py
lib/src/h2pcontrol_daq/centralDAQ_connector/: __init__.py  grpc_central_sink.py
test/: instrument_server.py
