[project]
name = "h2pcontrol-daq-central"
version = "0.1.0"
requires-python = ">=3.12"
maintainers = [
    { name = "Ignacio Icaza", email = "i.icaza.navarro@student.vu.nl" },
]
description = "Central DAQ server for h2pcontrol software"
dependencies = [
    "h5py",
    "protobuf",
    "grpcio>=1.80.0",
    "beyer-labs-h2pcontrol-grpc-python>=1.80.0.1.20260406165239",
    "beyer-labs-h2pcontrol-protocolbuffers-pyi>=34.1.0.1.20260406165239",
    "beyer-labs-h2pcontrol-protocolbuffers-python>=34.1.0.1.20260406165239",
    "python-dotenv",
    "influxdb-client",
    "aiofiles",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"