[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2pcontrol-daq"
version = "1.0.0"
description = "A Python package for controlling the H2P DAQ system."
authors = [
  { name = "Tijmen Hilgenkamp", email = "t.j.hilgenkamp@student.vu.nl" },
  { name = "Ignacio Icaza", email = "i.icaza.navarro@student.vu.nl" },
]
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.10.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
influx = [
  "influxdb-client>=1.49.0",
]
grpc = [
  "betterproto2==0.4.0",
  "grpcio>=1.72.1",
  "grpclib>=0.4.8",
]
dev = [
  "build>=1.2.2.post1",
]

[project.urls]
Homepage = "https://github.com/iic201/h2pcontrol-daq.git"

[tool.setuptools]
py-modules = ["daq_pipeline"]
