[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "h2pcontrol-daq"
version = "0.1.0"
description = "Lightweight local DAQ package for H2PControl producers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/h2pcontrol_daq"]
