[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "h2pcontrol-daq"
version = "0.1.0"
maintainers = [
    { name = "Ignacio Icaza", email = "i.icaza.navarro@student.vu.nl" },
]
description = "LocalDAQ package for H2PControl servers"
requires-python = ">=3.11"
dependencies = [
    "h5py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/h2pcontrol_daq"]
